test: add GitHubClient test with MockWebServer and integration test for analyze endpoint